# rusty_dns

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs  protocol_errors.rs  resolver_errors.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  packet_director.rs
crates/protocols/src/builders/: header_builder.rs  mod.rs  packet_builder.rs  question_builder.rs
crates/protocols/src/models/: dns_flags.rs  lookup.rs  packets.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  server.rs
crates/server/src/handlers/: dns_handler.rs  mod.rs
crates/server/src/models/: dns_flags.rs  mod.rs  packets.rs
crates/server/src/utils/: mod.rs  number_utils.rs
crates/utils/: Cargo.toml
crates/utils/src/utils/: number_utils.rs
src/: lib.rs  main.rs  models.rs  server.rs
src/builders/: mod.rs  packet_builder.rs
src/handlers/: dns_handler.rs
src/models/: lookup.rs  mod.rs  packets.rs
src/utils/: string_utils.rs
tests/: Cargo.toml  packet_tests.rs
tests/src/: lib.rs  packet_tests.rs  resolver.rs  resolver_tests.rs
